--- a/bio.html
+++ b/bio.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    h2>THINGS ABOUT ME </h2>
+    <h2>THINGS ABOUT ME </h2>
         <ul>
             <br>I come from Bushenyi.
             <br>Am a student at Makerere.
