--- a/bio.html
+++ b/bio.html
@@ -10,6 +10,9 @@
 <body>
     <h2>THINGS ABOUT ME </h2>
         <ul>
+            <br>StudentNo:2100708438
+            <br>RegistratiionNo:21/U/08438/EVE
+            <br>Name: Tusiimirwe Jemily
             <br>I come from Bushenyi.
             <br>Am a student at Makerere.
             <br>I do soft ware engineering.
